CHT-266: Refactoring